<resources>
    <string name="app_name">Movie-Suggestion-Randomizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id">811133277753-u2rbflo57k0ptrepkaj1a46ejov1r0q4.apps.googleusercontent.com</string>

    // LOGIN
    <string name="fragment_login_username_prompt">Username</string>
    <string name="fragment_login_password_prompt">*****</string>
    <string name="fragment_login_username">Username</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_register_prompt">No username or password?</string>
    <string name="fragment_login_register">register</string>
    <string name="fragment_login_submit">submit</string>

    // REGISTER
    <string name="fragment_register_username_prompt">username</string>
    <string name="fragment_register_password_prompt">*****</string>
    <string name="fragment_register_username">Username</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_submit">Register</string>

    // SPLASH SIGN IN
    <string name="fragment_sign_in_splash_welcome">Welcome!</string>
    <string name="fragment_sign_in_splash_prompt_text">Login using email or username\n\nUse any of the associated accounts</string>
    <string name="fragment_sign_in_splash_email">Email Sign In</string>
    <string name="fragment_sign_in_splash_google">Google Sign In</string>
    <string name="fragment_sign_in_splash_register">Register Here</string>

    // SPLASH SCREEN

    // BOTTOM NAV
    <string name="bottom_nav_menu_favorite">Favorite</string>
    <string name="bottom_nav_menu_home">Home</string>
    <string name="bottom_nav_menu_search">Search</string>

    // SEARCH
    <string name="search_tab_query">query</string>
    <string name="search_tab_random">random</string>

    // FAVORITES
    <string name="favorite_tab_movies">Movies</string>
    <string name="favorite_tab_collections">Collections</string>

    // MOVE PREVIEW
    <string name="movie_title_tools_text">movie title</string>
    <string name="movie_date_tools_text">date</string>
    <string name="movie_rating_tools_text">rating</string>
    <string name="movie_preview_image">MOVIE IMAGE</string>

    // LANDING
    <string name="landing_now_playing_header">Now Playing:</string>
    <string name="landing_top_rated_header">Top Rated:</string>
    <string name="landing_popular_header">Popular:</string>
    <string name="landing_recently_visited_header">Recently Visited</string>

    // EXPANDED MOVIE
    <string name="expanded_movie_as_prompt_text">\nAs</string>
    <string name="expanded_movie_title_text">TITLE (genre)</string>
    <string name="expanded_movie_director_text">director</string>
    <string name="expanded_movie_description_text">	"A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground \"fight clubs\" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion."</string>


    // CAST MEMBER
    <string name="cast_member_full_name_text">Last, First\nAs</string>
    <string name="cast_member_character_name_text">FIRST LAST</string>

</resources>