<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/fragment_login_username_prompt"
            android:ems="10"
            android:id="@+id/register_username_edit_text"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/_promptUser"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/fragment_login_password_prompt"
            android:ems="10"
            android:id="@+id/_password"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/_promptPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/fragment_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_promptUser"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="186dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="89dp"
            android:layout_marginEnd="257dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/fragment_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_promptPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="89dp"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/register_username_edit_text"
            android:layout_marginEnd="259dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/fragment_login_register_prompt"
            android:layout_width="219dp"
            android:layout_height="29dp"
            android:id="@+id/_promptRegister"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="87dp"
            android:layout_marginEnd="105dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/login_submit_button" />

    <TextView
            android:text="@string/fragment_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:autoLink="web"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/_promptRegister"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="87dp"
            android:layout_marginEnd="275dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            app:layout_constraintHorizontal_bias="0.0"
            android:focusable="true" />

    <Button
            android:text="@string/fragment_login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_submit_button"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="113dp"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>