<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.account.Register.RegisterActivity"
        android:clickable="true">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/fragment_register_username_prompt"
            android:ems="10"
            android:id="@+id/register_username_edit_text"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/_promptUser"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="@string/fragment_register_password_prompt"
            android:ems="10"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/_promptPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="88dp"
            android:layout_marginEnd="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/register_password_edit_text" />

    <TextView
            android:text="@string/fragment_register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_promptUser"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="186dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="89dp"
            android:layout_marginEnd="257dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/fragment_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_promptPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="89dp"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/register_username_edit_text"
            android:layout_marginEnd="259dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="@string/fragment_register_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_submit_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="152dp"
            android:layout_marginEnd="153dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="256dp"
            android:layout_marginTop="54dp"
            app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>