<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context=".activities.account.SignInSplash"
        android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">

    <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:text="@string/fragment_sign_in_splash_welcome"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/LoginPromptText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeText"
            android:text="@string/fragment_sign_in_splash_prompt_text"
            android:textSize="30sp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:id="@+id/SignInLinearContainer"
            android:layout_width="410dp"
            android:layout_height="301dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginPromptText">

        <com.google.android.gms.common.SignInButton
                android:id="@+id/EmailSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/fragment_sign_in_splash_email"
                android:layout_margin="20dp"
                android:layout_gravity="bottom" />

        <com.google.android.gms.common.SignInButton
                android:id="@+id/GoogleSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:layout_editor_absoluteY="453dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="bottom" />
    </LinearLayout>
    <TextView
            android:id="@+id/splashRegisterButton"
            app:layout_constraintTop_toBottomOf="@+id/SignInLinearContainer"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sign_in_splash_register"
            android:gravity="center"
            android:clickable="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>