<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/landing_now_playing_header"
                    android:textStyle="bold"
                    android:textColor="#000000" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/landing_now_playing_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="15dp" />

            <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_divider" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/landing_top_rated_header"
                    android:textColor="#000000"
                    android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/landing_top_rated_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="15dp" />

            <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_divider" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/landing_popular_header"
                    tools:text="@string/landing_popular_header"
                    android:textStyle="bold"
                    android:textColor="#000000" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/landing_popular_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="15dp" />

            <View
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_divider" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/landing_recently_visited_header"
                    tools:text="@string/landing_recently_visited_header"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/landing_recently_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>